2007-02-06  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Add Belarusian Latin under Belarusian team.

2007-02-05  David Lodge <dave@cirt.net>

	* templates/language-release.tmpl: Started making XHTML valid

2007-02-05  David Lodge <dave@cirt.net>

	* data/main.css: Cleared up remaining warnings, added mainpage class
	* templates/index.tmpl: Made XHTML valid

2007-02-05  David Lodge <dave@cirt.net>

	* data/main.css: Backed out the change until we can work out why diffs are showing up in the css file.

2007-02-05  David Lodge <dave@cirt.net>

	* data/main.css: SVN seems to have messed up the css - weird!
	* people.xml.in: Added preceding slash to default image

2007-02-05  Danilo Šegan  <danilo@gnome.org>

	Added RTL support.

	* templates/language-release.tmpl:
	* templates/list-languages.tmpl:
	* templates/list-modules.tmpl:
	* templates/list-releases.tmpl:
	* templates/list-teams.tmpl:
	* templates/module.tmpl:
	* templates/people.tmpl:
	* templates/person.tmpl:
	* templates/release.tmpl:
	* templates/team.tmpl:
	* templates/index.tmpl: Added dir="rtl" for RTL languages.

	* releases.py:
	* teams.py:
	* view-module.py:
	* people.py: Add html.rtl value.
	* defaults.py (rtl_languages): Added.

2007-02-05  David Lodge <dave@cirt.net>

	* data/main.css: Fixed div.maintainer causing invalid CSS and corrected url
	* people.xml.in: Fixed default icon to read from the data directory

2007-02-05  Danilo Šegan  <danilo@gnome.org>

	* releases.xml.in: Remove NetworkManager from extras, seahorse
	from fifth toe.

2007-02-05  Danilo Šegan  <danilo@gnome.org>

	Fix #404219.

	* people.py (get_roles_for):
	* templates/person.tmpl: Use nospam obfuscating for bugzilla account.

2007-02-05  Danilo Šegan  <danilo@gnome.org>

	* .htaccess: Set DirectoryIndex to index.py.
	* index.py:
	* templates/index.tmpl: Added.

2007-02-05  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Update Galician team data.
