@@ -179,10 +179,15 @@
     <email>dooteo@euskalgnu.org</email>
   </person>
   <!-- be translation coordinator -->
-  <person id="alesnk">
+  <person id="alesnk"><!-- old one -->
     <name>Ales Nyakhaychyk</name>
     <email>nab@mail.by</email>
   </person>
+  <person id="x-iharhrachyshka"><!-- new one -->
+    <name>Ihar Hrachyshka</name>
+    <email>ihar.hrachyshka@gmail.com</email>
+  </person>
+
   <!-- bn translation coordinator -->
   <person id="jahmed">
     <name>Jamil Ahmed</name>
