@@ -58,7 +58,7 @@
   <team id="be">
     <_language id="be">Belarusian</_language>
     <_language id="be@latin">Belarusian Latin</_language>
-    <coordinator id="alesnk"/>
+    <coordinator id="x-iharhrachyshka"/>
     <webpage>http://www.i18n.linux.by/</webpage>
   </team>
   <team id="bn">
