@@ -1,5 +1,10 @@
 2007-02-06  Danilo Šegan  <danilo@gnome.org>
 
+	* people.xml.in: Added Ihar, Belarusian coordinator.
+	* translation-teams.xml.in: Update Belarusian coordinator.
+
+2007-02-06  Danilo Šegan  <danilo@gnome.org>
+
 	* translation-teams.xml.in: Add Belarusian Latin under Belarusian team.
 
 2007-02-05  David Lodge <dave@cirt.net>
